[project]
name = "auto-live-tl"
version = "0.1.0"
description = "A basic translation backend for translating any audio source via PCM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "sounddevice>=0.5.5",
]
